Clear the title in _config.yml
Remove title from configuration file

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Giovanni — Sito Personale"
+title: ""
 name: "Giovanni"
 description: "Fisica • Progetti • Ricerca • Scritti"
 url: "https://giovannimaglio.github.io"
