--- a/_config.yml
+++ b/_config.yml
@@ -20,13 +20,13 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope"
-      url: "giovanni.maglio@studenti.unimi.it"
+      url: "mailto:giovanni.maglio@studenti.unimi.it"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/tuo-username"
     - label: "RecenSito"
       icon: "fas fa-fw fa-book"
-      url: "https://recensito.example.com"
+      url: "https://giovannimaglio.pythonanywhere.com"
 
 # Layout di default per le pagine
 defaults:
@@ -64,7 +64,7 @@ footer:
       url: "https://giovannimaglio.github.io/giovanni.github.io/"
     - label: "Email"
       icon: "fas fa-fw fa-envelope"
-      url: "giovanni.maglio@studenti.unimi.it"
+      url: "mailto:giovanni.maglio@studenti.unimi.it"
 
 # Opzioni varie
 paginate: 5
